--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://www.altostra.com/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://quantumone.b-cdn.net/images/favicon.ico" />
     <script src="./api.js" type="module"></script>
     <script src="./server.js" type="module"></script>
     <script src="./chat.js" type="module"></script>
@@ -44,13 +44,13 @@
     </div>
 
       <div class="chat-header">
-        <h1>GPT-3 Powered Application</h1>
+        <h1>CoverletterAI</h1>
         <p>
-          Deployed and managed by 
-          <a href="https://altostra.com" target="_blank" rel="noopener noreferrer">
+          Create cover letters in seconds
+          <a href="https://coverletterai.ai" target="_blank" rel="noopener noreferrer">
             <img 
               alt="logo"
-              src='./images/altostra-logo.svg'
+              src='./images/quantumoneeye.svg'
             />
         </a>
         </p>
