--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       <div class="chat-header">
         <h1>CoverletterAI</h1>
         <p>
-          Create cover letters in seconds
+          Create AI generated cover letters in seconds
           <a href="https://coverletterai.ai" target="_blank" rel="noopener noreferrer">
             <img 
               alt="logo"
