--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>GPT Web App</title>
+    <title>GPT-1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -44,13 +44,13 @@
     </div>
 
       <div class="chat-header">
-        <h1>CoverletterAI</h1>
+        <h1>GPT-1</h1>
         <p>
-          Create AI generated cover letters in seconds
-          <a href="https://coverletterai.ai" target="_blank" rel="noopener noreferrer">
+          GPT-1 agents are highly customized OpenAI ChatGPT & DALLE instances designed to streamline your business.
+          <a href="https://ai.quantumone.network" target="_blank" rel="noopener noreferrer">
             <img 
               alt="logo"
-              src='./images/quantumoneeye.svg'
+              src='https://quantumone.b-cdn.net/AntHealth_Logos/3.7.png'
             />
         </a>
         </p>
